fix: implemented sonar scans